# AdvanceRAG

./: .gitignore  Makefile  formatted_parsing_result.json  formatter.py  parsing.py  pyproject.toml  run.py
app/: __init__.py  cli.py  dashboard.py
app/api/: __init__.py  dependencies.py  main.py
app/api/routes/: __init__.py  chat.py  deletion.py  ingestion.py
app/api/routes/agent/: __init__.py
app/api/routes/rag/: __init__.py  documents.py  query.py
app/core/: __init__.py  config.py  logging.py  workspace_pool.py
app/modules/lightrag/: base.py  lightrag.py  operate.py  pipeline.py  prompt.py  prompt_multimodal.py  rerank.py
app/modules/lightrag/api/: lightrag_server.py
app/modules/lightrag/api/routers/: document_routes.py  graph_routes.py
app/modules/lightrag/api/webui/: index.html
app/modules/lightrag/api/webui/assets/: architecture-7EHR7CIX-BDG0Yqp3.js  architecture-7EHR7CIX-Drc_brEz.js  architectureDiagram-3BPJPVTR-B3IGllrX.js  architectureDiagram-3BPJPVTR-BctrLM3T.js  blockDiagram-GPEHLZMM-Bg2xYFiV.js  blockDiagram-GPEHLZMM-DDUwzmUN.js  c4Diagram-AAUBKEIU-0UQ_Dx7X.js  c4Diagram-AAUBKEIU-DBsTdCOq.js  channel-0XUyj-8u.js  channel-CXOyXHgv.js  chunk-2J33WTMH-CMuy6M3v.js  chunk-2J33WTMH-CRmRaqhn.js  chunk-3OPIFGDE-CvQFqctc.js  chunk-3OPIFGDE-ugDT9fiB.js  chunk-5ZQYHXKU-BhU2sBTX.js  chunk-5ZQYHXKU-BomGPSSf.js  chunk-727SXJPM-Cj0xwIx_.js  chunk-727SXJPM-mMJRNG4L.js  chunk-AQP2D5EJ-CViq1RYV.js  chunk-AQP2D5EJ-zinwWgWu.js  chunk-CSCIHK7Q-C6N5JJJj.js  chunk-CSCIHK7Q-ChqwSIHy.js  chunk-L5ZTLDWV-B0szmfdb.js  chunk-L5ZTLDWV-CKQ284vf.js  chunk-ND2GUHAM-BNNgUx1C.js  chunk-ND2GUHAM-BNWFbfMs.js  chunk-NZK2D7GU-Ma5L7QT5.js  chunk-NZK2D7GU-padERKPV.js  chunk-O5CBEL6O-BMrUuuAC.js  (+86 more)
app/modules/lightrag/chunker/: __init__.py  contextualize_parent_child.py  paragraph_semantic.py  recursive_character.py
app/modules/lightrag/kg/: memgraph_impl.py  mongo_impl.py  neo4j_impl.py  networkx_impl.py  opensearch_impl.py  postgres_impl.py
app/modules/parser/: amazon_textract.py  llamaparse.py  llamaparsev2.py
app/modules/raganything/: modalprocessors.py  processor.py  prompt.py
app/rag_pipeline/: __init__.py  factory.py  ingest.py  model_funcs.py  retrieve.py
app/services/: llm.py
lightrag_webui/: index.html  vite.config.ts
lightrag_webui/src/: App.tsx  AppRouter.tsx
lightrag_webui/src/api/: lightrag.ts
lightrag_webui/src/components/graph/: Legend.tsx  PropertiesView.tsx  WorkspaceDropdown.tsx
lightrag_webui/src/contexts/: GraphReadonlyContext.tsx
lightrag_webui/src/features/: DocumentManager.tsx  KnowledgeGraphPage.tsx  LoginPage.tsx  SiteHeader.tsx
lightrag_webui/src/hooks/: useLightragGraph.tsx
lightrag_webui/src/lib/: constants.ts
lightrag_webui/src/locales/: en.json
lightrag_webui/src/stores/: settings.ts
lightrag_webui/src/utils/: graphColor.ts
